# resume_screening_env

./: .gitignore  Dockerfile  README.md  data.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: app.py
