[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resume-screening-env"
version = "1.0.0"
description = "OpenEnv environment for resume screening — a real-world HR task simulation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "OpenEnv Participant" }
]
keywords = ["openenv", "resume-screening", "hr", "nlp", "reinforcement-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

# ✅ Entry point references main() function — not app object
[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://huggingface.co/spaces/aakarshitraj/resume-screening-env"
Repository = "https://github.com/AakarshitRaj/resume-screening-env"